--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <h2>My Activities</h2>
                 <div class="portfolio-grid">
                     <div class="portfolio-card">
-                        <h2>HTML ACTIVITY (link)</h2>
-                        <button onclick="window.open('https://steffidou.github.io/UDASCO-HTML-ACT/', '_blank')">Click here</button>
+                        <h2>This is my HTML activity</h2>
+                        <button onclick="window.open('https://steffidou.github.io/UDASCO-HTML-ACT/', '_blank')">Just click here</button>
                     </div>
 
                     <div class="portfolio-card">
-                        <h2>CSS ACTIVITY (link)</h2>
-                        <button onclick="window.open('https://steffidou.github.io/UDASCO-CSS-ACT/', '_blank')">Click here</button>
+                        <h2>This is my CSS activity</h2>
+                        <button onclick="window.open('https://steffidou.github.io/csscv/', '_blank')">Just lick here</button>
                     </div>
                 </div>
         </div>
