--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                     <div class="portfolio-card">
                         <h2>This is my CSS activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/csscv/', '_blank')">Just lick here</button>
+                        <button onclick="window.open('https://steffidou.github.io/csscv/', '_blank')">Just click here</button>
                     </div>
                 </div>
         </div>
