--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                         <h2>This is my CSS activity</h2>
                         <button onclick="window.open('https://steffidou.github.io/csscv/', '_blank')">Just click here</button>
                     </div>
+                    <div class="portfolio-card">
+                        <h2>This is my json activity</h2>
+                        <button onclick="window.open('https://steffidou.github.io/json-act/', '_blank')">Just click here"</button>
+                    </div>
+                    <div class="portfolio-card">
+                        h2>This is my Search-bar activity</h2>
+                        <button onclick="window.open('https://steffidou.github.io/search_bar-act/', '_blank')">Just click here"</button>
+                    </div>
                 </div>
         </div>
     </div>
