--- a/index.html
+++ b/index.html
@@ -13,29 +13,37 @@
             <h2>Dou Issa Steffi E. Udasco</h2>
             <p>BSIT - 3R1</p>
         </div>
+
         <div class="activities">
             <h2>My Activities</h2>
-                <div class="portfolio-grid">
-                    <div class="portfolio-card">
-                        <h2>This is my HTML activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/UDASCO-HTML-ACT/', '_blank')">Just click here</button>
-                    </div>
-
-                    <div class="portfolio-card">
-                        <h2>This is my CSS activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/csscv/', '_blank')">Just click here</button>
-                    </div>
-                    <div class="portfolio-card">
-                        <h2>This is my json activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/json-act/', '_blank')">Just click here</button>
-                    </div>
-                    <div class="portfolio-card">
-                        <h2>This is my Search-bar activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/search_bar-act/', '_blank')">Just click here</button>
-                    </div>
+            <div class="portfolio-grid">
+                <div class="portfolio-card">
+                    <h2>This is my HTML activity</h2>
+                    <button onclick="window.open('https://steffidou.github.io/UDASCO-HTML-ACT/', '_blank')">Just click here</button>
                 </div>
+
+                <div class="portfolio-card">
+                    <h2>This is my CSS activity</h2>
+                    <button onclick="window.open('https://steffidou.github.io/csscv/', '_blank')">Just click here</button>
+                </div>
+                <div class="portfolio-card">
+                    <h2>This is my JSON activity</h2>
+                    <button onclick="window.open('https://steffidou.github.io/json-act/', '_blank')">Just click here</button>
+                </div>
+                <div class="portfolio-card">
+                    <h2>This is my Search-bar activity</h2>
+                    <button onclick="window.open('https://steffidou.github.io/search_bar-act/', '_blank')">Just click here</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="extra-content">
+            <h2>Additional Information</h2>
+            <p>This is the new text placed on the right side.</p>
+            <button onclick="alert('Button Clicked!')">Click Me</button>
         </div>
     </div>
+
     <div class="footer">
         <p> Application Development & Emerging Technologies </p>
     </div>
