--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                         <h2>This is my Search-bar activity</h2>
                         <button onclick="window.open('https://steffidou.github.io/search_bar-act/', '_blank')">Just click here</button>
                     </div>
+                    <div class="portofolio-card">
+                        <h2>This is React Todo App</h2>
+                        <button onclick="window.open('https://steffidou.github.io/todo-app/', '_blank')">Just click here</button>
+                    </div>
                 </div>
         </div>
     </div>
