--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <button onclick="window.open('https://steffidou.github.io/search_bar-act/', '_blank')">Just click here</button>
                     </div>
                     <div class="portofolio-card">
-                        <h2>This is React Todo App</h2>
+                        <h2>This is my React Todo App</h2>
                         <button onclick="window.open('https://steffidou.github.io/todo-app/', '_blank')">Just click here</button>
                     </div>
                 </div>
