--- a/index.html
+++ b/index.html
@@ -15,29 +15,32 @@
         </div>
         <div class="activities">
             <h2>My Activities</h2>
-                <div class="portfolio-grid">
-                    <div class="portfolio-card">
-                        <h2>This is my HTML activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/UDASCO-HTML-ACT/', '_blank')">Just click here</button>
-                    </div>
-
-                    <div class="portfolio-card">
-                        <h2>This is my CSS activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/csscv/', '_blank')">Just click here</button>
-                    </div>
-                    <div class="portfolio-card">
-                        <h2>This is my json activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/json-act/', '_blank')">Just click here</button>
-                    </div>
-                    <div class="portfolio-card">
-                        <h2>This is my Search-bar activity</h2>
-                        <button onclick="window.open('https://steffidou.github.io/search_bar-act/', '_blank')">Just click here</button>
-                    </div>
-                    <div class="portofolio-card">
-                        <h2>This is my React Todo App</h2>
-                        <button onclick="window.open('https://steffidou.github.io/todo-app/', '_blank')">Just click here</button>
-                    </div>
+            <div class="portfolio-grid">
+                <div class="portfolio-card">
+                    <h2>This is my HTML activity</h2>
+                    <button onclick="window.open('https://steffidou.github.io/UDASCO-HTML-ACT/', '_blank')">Just click here</button>
                 </div>
+                <div class="portfolio-card">
+                    <h2>This is my CSS activity</h2>
+                    <button onclick="window.open('https://steffidou.github.io/csscv/', '_blank')">Just click here</button>
+                </div>
+                <div class="portfolio-card">
+                    <h2>This is my JSON activity</h2>
+                    <button onclick="window.open('https://steffidou.github.io/json-act/', '_blank')">Just click here</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- New right-aligned section -->
+        <div class="right-activities">
+            <div class="portfolio-card">
+                <h2>This is my Search-bar activity</h2>
+                <button onclick="window.open('https://steffidou.github.io/search_bar-act/', '_blank')">Just click here</button>
+            </div>
+            <div class="portfolio-card">
+                <h2>This is my React Todo App</h2>
+                <button onclick="window.open('https://steffidou.github.io/todo-app/', '_blank')">Just click here</button>
+            </div>
         </div>
     </div>
     <div class="footer">
